force-app/main/default/objects/ChangeManagement__c/ChangeManagement__c.object-meta.xml
<CustomObject>
    <label>退去日変更管理</label>
    <nameField>
        <displayFormat>CM-{000000000}</displayFormat>
        <label>変更管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>