force-app/main/default/objects/ChangeManagement__c/fields/ApplicationWindowCompanyName_Nolink__c.field-meta.xml
<CustomField>
    <fullName>ApplicationWindowCompanyName_Nolink__c</fullName>
    <label>申入れ窓口_会社名（リンク無し）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>