force-app/main/default/objects/ChangeManagement__c/fields/ApplicationWindowFax_Nolink__c.field-meta.xml
<CustomField>
    <fullName>ApplicationWindowFax_Nolink__c</fullName>
    <label>申入れ窓口_FAX（リンク無し）</label>
    <type>Phone</type>
</CustomField>