force-app/main/default/objects/ChangeManagement__c/fields/ApplicationWindowMail_Nolink__c.field-meta.xml
<CustomField>
    <fullName>ApplicationWindowMail_Nolink__c</fullName>
    <label>申入れ窓口_メール（リンク無し）</label>
    <type>Email</type>
</CustomField>