force-app/main/default/objects/ChangeManagement__c/fields/ApplicationWindowStaff__c.field-meta.xml
<CustomField>
    <fullName>ApplicationWindowStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約申入れ先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ApplicationWindowStaffs</relationshipName>
    <type>Lookup</type>
</CustomField>