force-app/main/default/objects/ChangeManagement__c/fields/AtMoveChangeContactFaxSender__c.field-meta.xml
<CustomField>
    <fullName>AtMoveChangeContactFaxSender__c</fullName>
    <label>入居時変更連絡FAX者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>