force-app/main/default/objects/ChangeManagement__c/fields/BeforeChangeLeaveScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>BeforeChangeLeaveScheduledDate__c</fullName>
    <label>変更前退去日</label>
    <type>Date</type>
</CustomField>