force-app/main/default/objects/ChangeManagement__c/fields/Cancel__c.field-meta.xml
<CustomField>
    <fullName>Cancel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約申入</label>
    <referenceTo>Cancel__c</referenceTo>
    <relationshipLabel>退去日変更管理</relationshipLabel>
    <relationshipName>ChangeRequestCancelRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>