force-app/main/default/objects/ChangeManagement__c/fields/CancelCancelApplicationConfirmDateTime__c.field-meta.xml
<CustomField>
    <fullName>CancelCancelApplicationConfirmDateTime__c</fullName>
    <label>解約取消申込_確認日時</label>
    <type>DateTime</type>
</CustomField>