force-app/main/default/objects/ChangeManagement__c/fields/CancelDateChangeFreeColumn__c.field-meta.xml
<CustomField>
    <fullName>CancelDateChangeFreeColumn__c</fullName>
    <label>解約日変更フリー欄</label>
    <type>TextArea</type>
</CustomField>