force-app/main/default/objects/ChangeManagement__c/fields/CancelDateExtensionFreeColumn__c.field-meta.xml
<CustomField>
    <fullName>CancelDateExtensionFreeColumn__c</fullName>
    <label>解約日延長フリー欄</label>
    <type>TextArea</type>
</CustomField>