force-app/main/default/objects/ChangeManagement__c/fields/CancelTeamAcceptDate__c.field-meta.xml
<CustomField>
    <fullName>CancelTeamAcceptDate__c</fullName>
    <label>解約チーム受付日</label>
    <type>Date</type>
</CustomField>