force-app/main/default/objects/ChangeManagement__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入替</label>
    <referenceTo>Change__c</referenceTo>
    <relationshipName>ChangeRequestChangeRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>