force-app/main/default/objects/ChangeManagement__c/fields/ChangeContactNote__c.field-meta.xml
<CustomField>
    <fullName>ChangeContactNote__c</fullName>
    <label>変更対応備考</label>
    <type>TextArea</type>
</CustomField>