force-app/main/default/objects/ChangeManagement__c/fields/ChangeManagementStatus__c.field-meta.xml
<CustomField>
    <fullName>ChangeManagementStatus__c</fullName>
    <label>変更管理パス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受付中</fullName>
                <default>true</default>
                <label>受付中</label>
            </value>
            <value>
                <fullName>受付済み</fullName>
            </value>
            <value>
                <fullName>確認中</fullName>
            </value>
            <value>
                <fullName>確認済み</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>依頼受付</fullName>
                <isActive>false</isActive>
                <label>依頼受付</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>