force-app/main/default/objects/ChangeManagement__c/fields/ChangeNoticeFreeFields3__c.field-meta.xml
<CustomField>
    <fullName>ChangeNoticeFreeFields3__c</fullName>
    <label>変更通知フリー項目３</label>
    <type>TextArea</type>
</CustomField>