force-app/main/default/objects/ChangeManagement__c/fields/ChangeNoticeStaff__c.field-meta.xml
<CustomField>
    <fullName>ChangeNoticeStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>変更通知担当</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ChangeRequestContactRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>