force-app/main/default/objects/ChangeManagement__c/fields/ChangePreviousLastRentPayDate__c.field-meta.xml
<CustomField>
    <fullName>ChangePreviousLastRentPayDate__c</fullName>
    <label>変更前最終家賃負担日</label>
    <type>Date</type>
</CustomField>