force-app/main/default/objects/ChangeManagement__c/fields/ChangeRequestId__c.field-meta.xml
<CustomField>
    <fullName>ChangeRequestId__c</fullName>
    <externalId>true</externalId>
    <label>変更依頼ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>