force-app/main/default/objects/ChangeManagement__c/fields/ChangeResultReportDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeResultReportDate__c</fullName>
    <label>管理会社確認日</label>
    <type>Date</type>
</CustomField>