force-app/main/default/objects/ChangeManagement__c/fields/CheckOutMoveOutDate__c.field-meta.xml
<CustomField>
    <fullName>CheckOutMoveOutDate__c</fullName>
    <formula>if( Cancel__r.MoveOutScheduledDate__c = ConfirmLeaveDate__c , &quot;OK&quot;, &quot;NG&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>退去日チェック</label>
    <type>Text</type>
</CustomField>