force-app/main/default/objects/ChangeManagement__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>企業</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不要</fullName>
            </value>
            <value>
                <fullName>済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>