force-app/main/default/objects/ChangeManagement__c/fields/CompletionPerson__c.field-meta.xml
<CustomField>
    <fullName>CompletionPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対応完了者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CompletionPersons</relationshipName>
    <type>Lookup</type>
</CustomField>