force-app/main/default/objects/ChangeManagement__c/fields/ConfirmLastRentRemittanceYear__c.field-meta.xml
<CustomField>
    <fullName>ConfirmLastRentRemittanceYear__c</fullName>
    <label>確定最終家賃送金年</label>
    <length>255</length>
    <type>Text</type>
</CustomField>