force-app/main/default/objects/ChangeManagement__c/fields/ConfirmLeaveDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmLeaveDate__c</fullName>
    <label>確定退去日</label>
    <type>Date</type>
</CustomField>