force-app/main/default/objects/ChangeManagement__c/fields/CorporateRules__c.field-meta.xml
<CustomField>
    <fullName>CorporateRules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業ルール</label>
    <referenceTo>ServiceContractCancel__c</referenceTo>
    <relationshipName>CorporateRules</relationshipName>
    <type>Lookup</type>
</CustomField>