force-app/main/default/objects/ChangeManagement__c/fields/CorrespondenceCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CorrespondenceCompletedDate__c</fullName>
    <label>対応完了日</label>
    <type>Date</type>
</CustomField>