force-app/main/default/objects/ChangeManagement__c/fields/CorrespondenceDate__c.field-meta.xml
<CustomField>
    <fullName>CorrespondenceDate__c</fullName>
    <label>対応日</label>
    <type>Date</type>
</CustomField>