force-app/main/default/objects/ChangeManagement__c/fields/DataChangeForRequestComment1__c.field-meta.xml
<CustomField>
    <fullName>DataChangeForRequestComment1__c</fullName>
    <label>データ変更依頼書用コメント1</label>
    <type>TextArea</type>
</CustomField>