force-app/main/default/objects/ChangeManagement__c/fields/ForMoveChangeNoticeMailDate__c.field-meta.xml
<CustomField>
    <fullName>ForMoveChangeNoticeMailDate__c</fullName>
    <label>入居用変更通知郵送日</label>
    <type>Date</type>
</CustomField>