force-app/main/default/objects/ChangeManagement__c/fields/GenerallyNoticeFreeFields1__c.field-meta.xml
<CustomField>
    <fullName>GenerallyNoticeFreeFields1__c</fullName>
    <label>通常通知フリー項目１</label>
    <type>TextArea</type>
</CustomField>