force-app/main/default/objects/ChangeManagement__c/fields/ImportantMatters__c.field-meta.xml
<CustomField>
    <fullName>ImportantMatters__c</fullName>
    <label>案件重要事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>