force-app/main/default/objects/ChangeManagement__c/fields/IsLeaveChangeWarning__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveChangeWarning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退去変更警告フラグ</label>
    <type>Checkbox</type>
</CustomField>