force-app/main/default/objects/ChangeManagement__c/fields/LastRentBurdenDate__c.field-meta.xml
<CustomField>
    <fullName>LastRentBurdenDate__c</fullName>
    <label>（不要）変更前最終家賃負担日</label>
    <type>Date</type>
</CustomField>