force-app/main/default/objects/ChangeManagement__c/fields/LastRentRemittanceDateConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>LastRentRemittanceDateConfirmationDate__c</fullName>
    <label>最終家賃送金年月確認日</label>
    <type>Date</type>
</CustomField>