force-app/main/default/objects/ChangeManagement__c/fields/LeaveChangeCompanyReportDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveChangeCompanyReportDate__c</fullName>
    <label>企業へ変更可否確認日</label>
    <type>Date</type>
</CustomField>