force-app/main/default/objects/ChangeManagement__c/fields/LeaveChangeNotifyor__c.field-meta.xml
<CustomField>
    <fullName>LeaveChangeNotifyor__c</fullName>
    <label>退去変更通知者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>