force-app/main/default/objects/ChangeManagement__c/fields/LeaveChangeOrderDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveChangeOrderDate__c</fullName>
    <label>退去変更発注日</label>
    <type>Date</type>
</CustomField>