force-app/main/default/objects/ChangeManagement__c/fields/LeaveChangeRequestee__c.field-meta.xml
<CustomField>
    <fullName>LeaveChangeRequestee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>変更依頼受付者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChangeRequestUserRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>