force-app/main/default/objects/ChangeManagement__c/fields/LeaveDateAheadRequestSender__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateAheadRequestSender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>退去日前倒依頼_送付者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ChangeRequestContactRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>