force-app/main/default/objects/ChangeManagement__c/fields/LeaveDateChangeNoticeSendDateTime__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeNoticeSendDateTime__c</fullName>
    <label>退去日変更お知らせ_送付日時</label>
    <type>Date</type>
</CustomField>