force-app/main/default/objects/ChangeManagement__c/fields/LeaveDateChangeNoticeSender__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeNoticeSender__c</fullName>
    <label>退去日変更お知らせ_送付者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>