force-app/main/default/objects/ChangeManagement__c/fields/LeaveDateChangeRequestDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeRequestDate__c</fullName>
    <label>退去日変更依頼日</label>
    <type>Date</type>
</CustomField>