force-app/main/default/objects/ChangeManagement__c/fields/LeaveDateChangeRequestPerson__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeRequestPerson__c</fullName>
    <label>退去日変更依頼者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>