force-app/main/default/objects/ChangeManagement__c/fields/LeaveDateChangeReson__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeReson__c</fullName>
    <label>変更理由</label>
    <type>TextArea</type>
</CustomField>