force-app/main/default/objects/ChangeManagement__c/fields/LeaveDateExtensionRequestSender__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateExtensionRequestSender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>退去日延長依頼_送付者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ChangeRequestContactRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>