force-app/main/default/objects/ChangeManagement__c/fields/LeaveDateNotificationOfChangeSubmitter__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateNotificationOfChangeSubmitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>（不要）退去日変更依頼者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>退去日変更管理 (退去日変更依頼者)</relationshipLabel>
    <relationshipName>ChangeRequestContactRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>