force-app/main/default/objects/ChangeManagement__c/fields/ManagementCompanyContactDate__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyContactDate__c</fullName>
    <label>管理会社連絡日</label>
    <type>Date</type>
</CustomField>