force-app/main/default/objects/ChangeManagement__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <label>報告日</label>
    <type>Date</type>
</CustomField>