force-app/main/default/objects/ChangeManagement__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <label>報告者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>