force-app/main/default/objects/ChangeManagement__c/fields/Responder__c.field-meta.xml
<CustomField>
    <fullName>Responder__c</fullName>
    <label>対応者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>