force-app/main/default/objects/ChangeManagement__c/fields/SecondaryCheckPerson__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCheckPerson__c</fullName>
    <label>Wチェック者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>