force-app/main/default/objects/ChangeManagement__c/fields/SecondaryCheckResponder__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCheckResponder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2次チェック対応者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecondaryCheckResponders</relationshipName>
    <type>Lookup</type>
</CustomField>