force-app/main/default/objects/ChangeManagement__c/fields/WorkArrangementApprovalAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>WorkArrangementApprovalAcquisitionDate__c</fullName>
    <label>作業手配決裁取得日</label>
    <type>Date</type>
</CustomField>